force-app/main/default/objects/Account/fields/Ano_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Ano_de_Compra__c</fullName>
    <label>Ano de Compra</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>