force-app/main/default/objects/Account/fields/Atividade__c.field-meta.xml
<CustomField>
    <fullName>Atividade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Atividade</label>
    <referenceTo>Atividade__c</referenceTo>
    <relationshipLabel>Contas</relationshipLabel>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>