force-app/main/default/objects/Account/fields/CellPhone__c.field-meta.xml
<CustomField>
    <fullName>CellPhone__c</fullName>
    <label>CellPhone</label>
    <type>Phone</type>
</CustomField>