force-app/main/default/objects/Account/fields/checkbox__c.field-meta.xml
<CustomField>
    <fullName>checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>checkbox</label>
    <type>Checkbox</type>
</CustomField>