force-app/main/default/objects/Account/fields/CNPJn__c.field-meta.xml
<CustomField>
    <fullName>CNPJn__c</fullName>
    <label>CNPJn</label>
    <length>14</length>
    <type>Text</type>
</CustomField>