force-app/main/default/objects/Account/fields/CPFn__c.field-meta.xml
<CustomField>
    <fullName>CPFn__c</fullName>
    <label>CPFn</label>
    <length>11</length>
    <type>Text</type>
</CustomField>