force-app/main/default/objects/Account/fields/DatadeInsercao__c.field-meta.xml
<CustomField>
    <fullName>DatadeInsercao__c</fullName>
    <label>DatadeInsercao</label>
    <type>Date</type>
</CustomField>