force-app/main/default/objects/Account/fields/Dolar__c.field-meta.xml
<CustomField>
    <fullName>Dolar__c</fullName>
    <formula>Real__c  * 5.60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dolar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>