force-app/main/default/objects/Account/fields/Fator_Positivo__c.field-meta.xml
<CustomField>
    <fullName>Fator_Positivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fator Positivo</label>
    <type>Checkbox</type>
</CustomField>