force-app/main/default/objects/Account/fields/Has_Support_Plan__c.field-meta.xml
<CustomField>
    <fullName>Has_Support_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Os usuários de vendas usam esse campo para indicar ao suporte quais clientes têm planos de suporte.</description>
    <inlineHelpText>Esse cliente tem um plano de suporte atual? Marque esta caixa quando vender um plano de suporte a esse cliente.</inlineHelpText>
    <label>Has Support Plan</label>
    <type>Checkbox</type>
</CustomField>