force-app/main/default/objects/Account/fields/Localidade__c.field-meta.xml
<CustomField>
    <fullName>Localidade__c</fullName>
    <label>Localidade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>