force-app/main/default/objects/Account/fields/Real__c.field-meta.xml
<CustomField>
    <fullName>Real__c</fullName>
    <label>Real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>