force-app/main/default/objects/Account/fields/Salario__c.field-meta.xml
<CustomField>
    <fullName>Salario__c</fullName>
    <label>Salario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>