force-app/main/default/objects/Account/fields/Support_Plan_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Plan_Expiration_Date__c</fullName>
    <description>Data de expiração do plano de suporte atual</description>
    <inlineHelpText>Quando o plano de suporte atual deve ser renovado?</inlineHelpText>
    <label>Support Plan Expiration Date</label>
    <type>Date</type>
</CustomField>