force-app/main/default/objects/Account/fields/Tipo_Sanguineo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Sanguineo__c</fullName>
    <label>Tipo Sanguineo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>AB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>