force-app/main/default/objects/Account/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <description>Customer’s zone within the selected region—for sales operations use only.</description>
    <inlineHelpText>In which zone is this customer based? Depends on region.</inlineHelpText>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leste da Ásia</fullName>
            </value>
            <value>
                <fullName>Oceania</fullName>
            </value>
            <value>
                <fullName>Sudeste Asiático</fullName>
            </value>
            <value>
                <fullName>África</fullName>
            </value>
            <value>
                <fullName>Europa</fullName>
            </value>
            <value>
                <fullName>Oriente Médio</fullName>
            </value>
            <value>
                <fullName>Reino Unido + Irlanda</fullName>
            </value>
            <value>
                <fullName>Caribe</fullName>
            </value>
            <value>
                <fullName>América Central</fullName>
            </value>
            <value>
                <fullName>América do Sul</fullName>
            </value>
            <value>
                <fullName>Meio Oeste dos EUA</fullName>
            </value>
            <value>
                <fullName>Nordeste dos EUA</fullName>
            </value>
            <value>
                <fullName>Sudeste dos EUA</fullName>
            </value>
            <value>
                <fullName>Sudoeste dos EUA</fullName>
            </value>
            <value>
                <fullName>Oeste dos EUA</fullName>
            </value>
            <value>
                <fullName>Norte do Canadá</fullName>
            </value>
            <value>
                <fullName>Montanhas e oeste</fullName>
            </value>
            <value>
                <fullName>Pradarias</fullName>
            </value>
            <value>
                <fullName>Centro do Canadá</fullName>
            </value>
            <value>
                <fullName>Costa leste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>