force-app/main/default/objects/Account/recordTypes/AUla.recordType-meta.xml
<RecordType>
    <fullName>AUla</fullName>
    <active>true</active>
    <label>AUla</label>
</RecordType>