force-app/main/default/objects/Account/recordTypes/NovoRegistro.recordType-meta.xml
<RecordType>
    <fullName>NovoRegistro</fullName>
    <active>true</active>
    <label>NovoRegistro</label>
</RecordType>