force-app/main/default/objects/Account/recordTypes/PF.recordType-meta.xml
<RecordType>
    <fullName>PF</fullName>
    <active>true</active>
    <label>PF</label>
</RecordType>