force-app/main/default/objects/Account/recordTypes/PJ.recordType-meta.xml
<RecordType>
    <fullName>PJ</fullName>
    <active>true</active>
    <label>PJ</label>
</RecordType>