force-app/main/default/objects/Account/recordTypes/Teste.recordType-meta.xml
<RecordType>
    <fullName>Teste</fullName>
    <active>true</active>
    <label>Teste</label>
</RecordType>