force-app/main/default/objects/Account/recordTypes/Teste123.recordType-meta.xml
<RecordType>
    <fullName>Teste123</fullName>
    <active>true</active>
    <label>Teste123</label>
</RecordType>